Alternate fix for Bug 2534 - Viewing items table on item edit screen requires horizontal scrolling
This patch doesn't eliminate horizontal scrolling, but simplifies
the situation:

- The left-hand sidebar has been moved below the table of items.
- The "overflow:scroll" style has been removed from the table of items.
  Having overflow set meant that it was often necessary to scroll twice
  to reach data in the table: once using the scrollbars on the table
  and again using the page's scrollbars.

The NEKLS catalogers also extend their thanks for this fix.


Backporting to 3.4.x

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1948,9 +1948,6 @@ img.spinner {
     vertical-align: middle;
     padding-right: 0.3em;
 }
-#cataloguing_additem_itemlist div {
-	overflow : scroll;
-}
 ul.budget_hierarchy {
     margin-left: 0px;
     padding-left: 0px;
